--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
 
@@ -20,7 +20,7 @@
 <body>
 
   <div class="main-menu">
-    
+
     <h1 style="padding: 0 20px ;">DESSERTS</h1>
 
 
@@ -28,13 +28,13 @@
 
       <div class="item ">
 
-        <img src="assets/images/image-waffle-desktop.jpg" alt="item-img" class="img">
-        <button class="add-btn active">
-          <!-- Add to Cart  -->
-           <img src="assets/images/icon-decrement-quantity.svg" alt="inc">
-           <p>1</p>
-           <img src="assets/images/icon-increment-quantity.svg" alt="">
-        </button>
+
+        <div class="cart-btn active">
+          <button class="decrement-btn"><img src="assets/images/icon-decrement-quantity.svg" alt="inc"></button>
+          <span class="quantity">1</span>
+          <button class="increment-btn"><img src="assets/images/icon-increment-quantity.svg" alt=""></button>
+        </div>
+        <img src="assets/images/image-waffle-desktop.jpg" alt="item-img" class="img img-element">
 
         <div class="item-info">
           <p class="type">Waffle</p>
@@ -46,8 +46,11 @@
     
 
       <div class="item">
+
+        <div class="cart-btn">
+          <button class="add-cart-btn"><img src="assets/images/icon-add-to-cart.svg" alt="">Add to Cart</button>
+        </div>
         <img src="assets/images/image-brownie-desktop.jpg" alt="item-img" class="img">
-        <button class="add-btn">Add to Cart</button>
 
 
         <p class="type">Brownie</p>
